; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/mshtml/extr_nsio.c_nsuri_to_url.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/mshtml/extr_nsio.c_nsuri_to_url.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@nsuri_to_url.wine_prefixW = internal constant [5 x i8] c"wine:", align 1
@E_OUTOFMEMORY = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [10 x i8] c"%s -> %s\0A\00", align 1
@S_OK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @nsuri_to_url(i8* %0, i64 %1, i8** %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i8**, align 8
  %8 = alloca i8*, align 8
  store i8* %0, i8** %5, align 8
  store i64 %1, i64* %6, align 8
  store i8** %2, i8*** %7, align 8
  %9 = load i8*, i8** %5, align 8
  store i8* %9, i8** %8, align 8
  %10 = load i8*, i8** %5, align 8
  %11 = call i32 @strncmpW(i8* %10, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @nsuri_to_url.wine_prefixW, i64 0, i64 0), i32 5)
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %16, label %13

13:                                               ; preds = %3
  %14 = load i8*, i8** %8, align 8
  %15 = getelementptr inbounds i8, i8* %14, i64 5
  store i8* %15, i8** %8, align 8
  br label %16

16:                                               ; preds = %13, %3
  %17 = load i8*, i8** %8, align 8
  %18 = load i8, i8* %17, align 1
  %19 = sext i8 %18 to i32
  %20 = icmp ne i32 %19, 0
  br i1 %20, label %24, label %21

21:                                               ; preds = %16
  %22 = load i64, i64* %6, align 8
  %23 = icmp ne i64 %22, 0
  br i1 %23, label %24, label %34

24:                                               ; preds = %21, %16
  %25 = load i8*, i8** %8, align 8
  %26 = call i8* @SysAllocString(i8* %25)
  %27 = load i8**, i8*** %7, align 8
  store i8* %26, i8** %27, align 8
  %28 = load i8**, i8*** %7, align 8
  %29 = load i8*, i8** %28, align 8
  %30 = icmp ne i8* %29, null
  br i1 %30, label %33, label %31

31:                                               ; preds = %24
  %32 = load i32, i32* @E_OUTOFMEMORY, align 4
  store i32 %32, i32* %4, align 4
  br label %44

33:                                               ; preds = %24
  br label %36

34:                                               ; preds = %21
  %35 = load i8**, i8*** %7, align 8
  store i8* null, i8** %35, align 8
  br label %36

36:                                               ; preds = %34, %33
  %37 = load i8*, i8** %5, align 8
  %38 = call i32 @debugstr_w(i8* %37)
  %39 = load i8**, i8*** %7, align 8
  %40 = load i8*, i8** %39, align 8
  %41 = call i32 @debugstr_w(i8* %40)
  %42 = call i32 @TRACE(i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str, i64 0, i64 0), i32 %38, i32 %41)
  %43 = load i32, i32* @S_OK, align 4
  store i32 %43, i32* %4, align 4
  br label %44

44:                                               ; preds = %36, %31
  %45 = load i32, i32* %4, align 4
  ret i32 %45
}

declare dso_local i32 @strncmpW(i8*, i8*, i32) #1

declare dso_local i8* @SysAllocString(i8*) #1

declare dso_local i32 @TRACE(i8*, i32, i32) #1

declare dso_local i32 @debugstr_w(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
